--- a/src/VideoApp/Views/PlayerView.xaml
+++ b/src/VideoApp/Views/PlayerView.xaml
@@ -53,10 +53,6 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <Grid.Resources>
-            <converters:TimeValueConverter x:Key="TimeValueConverter"/>
-        </Grid.Resources>
-
         <vlc:VideoView Name="VideoControl"
                        Initialized="VideoView_Initialized"/>
 
@@ -117,203 +113,17 @@
             </StackPanel>
         </Border>
 
-        <Border
-            IsTabStop="False"
-            Tapped="ControlPanel_Tapped"
-            DoubleTapped="ControlPanel_DoubleTapped"
-            x:Name="ControlPanel"
-            MaxWidth="800"
-            Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
-            BorderBrush="{ThemeResource ControlElevationBorderBrush}"
-            BorderThickness="1"
-            CornerRadius="8"
-            Margin="8"
-            Padding="4,4"
-            VerticalAlignment="Bottom">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-                <Grid Grid.Column="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="80"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="80"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBlock
-                        Grid.Column="0"
-                        Margin="5"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
-
-                    <Slider
-                        Grid.Column="1"
-                        Maximum="{x:Bind ViewModel.Duration, Mode=OneWay}"
-                        StepFrequency="1"
-                        Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
-                        IsEnabled="{x:Bind converters:Helpers.Not(ViewModel.IsStopped), Mode=OneWay}"
-                        ThumbToolTipValueConverter="{StaticResource TimeValueConverter}"/>
-
-                    <TextBlock
-                        Grid.Column="2"
-                        Margin="5"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
-                </Grid>
-
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <StackPanel 
-                        Grid.Column="1"
-                        Orientation="Horizontal">
-
-                        <Button
-                            Command="{x:Bind ViewModel.SkipBackCommand}"
-                            Style="{StaticResource PlaybackButton}">
-                            <Button.Content>
-                                <FontIcon
-                                    Margin="0,0,0,0"  
-                                    Glyph="&#xED3C;" />
-                            </Button.Content>
-                        </Button>
-
-                        <Button                        
-                            Style="{StaticResource PlayButton}"
-                            Width="48"
-                            Height="48"
-                            Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
-                            <Button.Content>
-                                <Grid>
-                                    <FontIcon
-                                        Margin="2,2,0,0"
-                                        Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.IsPlaying), Mode=OneWay}"
-                                        Glyph="&#xF5B0;" />
-                                    <FontIcon 
-                                        Margin="1,1,0,0"
-                                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.IsPlaying), Mode=OneWay}"
-                                        Glyph="&#xF8AE;" />
-                                </Grid>
-                            </Button.Content>
-                        </Button>
-
-                        <Button
-                            Command="{x:Bind ViewModel.SkipForwardCommand}"
-                            Style="{StaticResource PlaybackButton}">
-                            <Button.Content>
-                                <FontIcon
-                                    Margin="0,0,0,0"  
-                                    Glyph="&#xED3D;" />
-                            </Button.Content>
-                        </Button>
-
-                    </StackPanel>
-
-                    <StackPanel Grid.Column="2"
-                                Orientation="Horizontal"
-                                HorizontalAlignment="Right">
-                        <Button Style="{StaticResource PlaybackButton}">
-                            <Button.Content>
-                                <FontIcon
-                                    Margin="0,0,0,0"  
-                                    Glyph="&#xED1E;" />
-                            </Button.Content>
-
-                            <Button.Flyout>
-                                <Flyout
-                                    x:Name="TracksFlyout"                                   
-                                    Placement="Bottom">
-                                    <Flyout.SystemBackdrop>
-                                        <MicaBackdrop/>
-                                    </Flyout.SystemBackdrop>
-
-                                    <StackPanel MinWidth="200" MaxWidth="300">
-                                        <TextBlock
-                                            Style="{ThemeResource CaptionTextBlockStyle}"
-                                            Text="Audio"/>
-                                        <ListView
-                                            ItemsSource="{x:Bind ViewModel.AudioTrackInfo, Mode=OneWay}"
-                                            SelectedValue="{x:Bind ViewModel.AudioTrack, Mode=TwoWay}"
-                                            DisplayMemberPath="Name"/>
-                                        <TextBlock
-                                            Style="{ThemeResource CaptionTextBlockStyle}"
-                                            Text="Subtitle"/>
-                                        <ListView
-                                            ItemsSource="{x:Bind ViewModel.SubtitleTrackInfo, Mode=OneWay}"
-                                            SelectedValue="{x:Bind ViewModel.SubtitleTrack, Mode=TwoWay}"
-                                            DisplayMemberPath="Name"/>
-                                    </StackPanel>
-                                </Flyout>
-                            </Button.Flyout>
-                        </Button>
-
-                        <Button Style="{StaticResource PlaybackButton}">
-                            <Button.Content>
-                                <FontIcon
-                                    Margin="0,0,0,0"  
-                                    Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
-                            </Button.Content>
-
-                            <Button.Flyout>
-                                <Flyout 
-                                        x:Name="VolumeFlyout" 
-                                        Placement="Bottom">
-                                    <Grid MinWidth="200"
-                                          MaxWidth="300">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto"/>
-                                            <ColumnDefinition Width="*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <FontIcon Grid.Column="0"
-                                                  Margin="0,0,8,0" 
-                                                  Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
-                                        <Slider Grid.Column="1"
-                                                Margin="5,0,5,0"
-                                                Maximum="100"
-                                                Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
-                                    </Grid>
-                                </Flyout>
-                            </Button.Flyout>
-                        </Button>
-
-                        <Button
-                            Command="{x:Bind ViewModel.ToggleFullScreenCommand}"
-                            Style="{StaticResource PlaybackButton}">
-
-                            <Button.Content>
-                                <FontIcon
-                                    Margin="0,0,0,0"  
-                                    Glyph="&#xE740;" />
-                            </Button.Content>
-                        </Button>
-
-                        <Button Style="{StaticResource PlaybackButton}">
-                            <Button.Content>
-                                <FontIcon
-                                   Margin="0,0,0,0"  
-                                   Glyph="&#xE712;" />
-                            </Button.Content>
-
-                            <Button.Flyout>
-                                <MenuFlyout x:Name="MenuFlyout">
-                                    <MenuFlyoutItem 
-                                        Text="Load"
-                                        Command="{x:Bind ViewModel.OpenMediaFileCommand}"/>
-                                </MenuFlyout>
-                            </Button.Flyout>
-                        </Button>
-                    </StackPanel>
-                </Grid>
-            </Grid>
-        </Border>
+        <Border x:Name="ControlPanel"
+                MaxWidth="800"
+                Margin="8"
+                VerticalAlignment="Bottom"
+                IsTabStop="False"
+                Tapped="ControlPanel_Tapped"
+                DoubleTapped="ControlPanel_DoubleTapped"
+                Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
+                BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+                BorderThickness="1"
+                CornerRadius="8"
+                Padding="4,4"/>
     </Grid>
 </UserControl>
