--- a/src/VideoApp/Views/PlayerView.xaml
+++ b/src/VideoApp/Views/PlayerView.xaml
@@ -1,14 +1,14 @@
-<UserControl
-    x:Class="VideoApp.Views.PlayerView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VideoApp.Views"
-    xmlns:vlc="using:LibVLCSharp.Platforms.Windows"
-    xmlns:converters="using:VideoApp.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
+<UserControl x:Class="VideoApp.Views.PlayerView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:VideoApp.Views"
+             xmlns:vlc="using:LibVLCSharp.Platforms.Windows"
+             xmlns:converters="using:VideoApp.Converters"
+             xmlns:controls="using:VideoApp.Controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d">
+    
     <Grid x:Name="Root">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="CommonStates">
@@ -56,9 +56,8 @@
         <vlc:VideoView Name="VideoControl"
                        Initialized="VideoView_Initialized"/>
 
-        <Grid
-            Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.IsPlaying), Mode=OneWay}"
-            Background="Black" />
+        <Grid Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.IsPlaying), Mode=OneWay}"
+              Background="Black" />
 
         <Border Name="VolumeOsd"
                 Opacity="0"
@@ -124,6 +123,9 @@
                 BorderBrush="{ThemeResource ControlElevationBorderBrush}"
                 BorderThickness="1"
                 CornerRadius="8"
-                Padding="4,4"/>
+                Padding="4,4">
+            <controls:PlayerToolbarControl x:Name="Toolbar"
+                                           ViewModel="{x:Bind ViewModel, Mode=OneTime}"/>
+        </Border>
     </Grid>
 </UserControl>
