--- a/src/VideoApp/Controls/PlayerToolbarControl.xaml
+++ b/src/VideoApp/Controls/PlayerToolbarControl.xaml
@@ -1,199 +1,180 @@
-<UserControl
-    x:Class="VideoApp.Controls.PlayerToolbarControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VideoApp.Controls"
-    xmlns:converters="using:VideoApp.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+<UserControl x:Class="VideoApp.Controls.PlayerToolbarControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:VideoApp.Controls"
+             xmlns:models="using:VideoApp.Core.Models"
+             xmlns:converters="using:VideoApp.Converters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Border MaxWidth="800"
+            Margin="8"
+            VerticalAlignment="Bottom"
+            Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
+            BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+            BorderThickness="1"
+            CornerRadius="8"
+            Padding="4,4">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <Grid.Resources>
-            <converters:TimeValueConverter x:Key="TimeValueConverter"/>
-        </Grid.Resources>
+            <Grid.Resources>
+                <converters:TimeValueConverter x:Key="TimeValueConverter"/>
+            </Grid.Resources>
 
-        <Grid Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="80"/>
-            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0"
+                  Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="80"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock
-                Grid.Column="0"
-                Margin="5"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
+                <TextBlock Grid.Column="0"
+                           Margin="5"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
 
-            <Slider
-                Grid.Column="1"
-                Maximum="{x:Bind ViewModel.Duration, Mode=OneWay}"
-                StepFrequency="1"
-                Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
-                IsEnabled="{x:Bind converters:Helpers.Not(ViewModel.IsStopped), Mode=OneWay}"
-                ThumbToolTipValueConverter="{StaticResource TimeValueConverter}"/>
+                <Slider Grid.Column="1"
+                        Maximum="{x:Bind ViewModel.Duration, Mode=OneWay}"
+                        StepFrequency="1"
+                        Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
+                        ThumbToolTipValueConverter="{StaticResource TimeValueConverter}"/>
 
-            <TextBlock
-                Grid.Column="2"
-                Margin="5"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
-        </Grid>
+                <TextBlock Grid.Column="2"
+                           Margin="5"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
+            </Grid>
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <StackPanel 
-                Grid.Column="1"
-                Orientation="Horizontal">
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <Button Command="{x:Bind ViewModel.SkipBackCommand}"
+                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                            Style="{StaticResource PlaybackButton}">
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0" Glyph="&#xED3C;" />
+                        </Button.Content>
+                    </Button>
 
-                <Button
-                    Command="{x:Bind ViewModel.SkipBackCommand}"
-                    Style="{StaticResource PlaybackButton}">
-                    <Button.Content>
-                        <FontIcon
-                            Margin="0,0,0,0"  
-                            Glyph="&#xED3C;" />
-                    </Button.Content>
-                </Button>
-
-                <Button                        
-                    Style="{StaticResource PlayButton}"
-                    Width="48"
-                    Height="48"
-                    Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
-                    <Button.Content>
-                        <Grid>
-                            <FontIcon
-                                Margin="2,2,0,0"
-                                Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.IsPlaying), Mode=OneWay}"
-                                Glyph="&#xF5B0;" />
-                            <FontIcon 
-                                Margin="1,1,0,0"
-                                Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.IsPlaying), Mode=OneWay}"
-                                Glyph="&#xF8AE;" />
-                        </Grid>
-                    </Button.Content>
-                </Button>
-
-                <Button
-                    Command="{x:Bind ViewModel.SkipForwardCommand}"
-                    Style="{StaticResource PlaybackButton}">
-                    <Button.Content>
-                        <FontIcon
-                            Margin="0,0,0,0"  
-                            Glyph="&#xED3D;" />
-                    </Button.Content>
-                </Button>
-
-            </StackPanel>
-
-            <StackPanel Grid.Column="2"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                <Button Style="{StaticResource PlaybackButton}">
-                    <Button.Content>
-                        <FontIcon
-                            Margin="0,0,0,0"  
-                            Glyph="&#xED1E;" />
-                    </Button.Content>
-
-                    <Button.Flyout>
-                        <Flyout
-                            x:Name="TracksFlyout"                                   
-                            Placement="Bottom">
-                            <Flyout.SystemBackdrop>
-                                <MicaBackdrop/>
-                            </Flyout.SystemBackdrop>
-
-                            <StackPanel MinWidth="200" MaxWidth="300">
-                                <TextBlock
-                                    Style="{ThemeResource CaptionTextBlockStyle}"
-                                    Text="Audio"/>
-                                <ListView
-                                    ItemsSource="{x:Bind ViewModel.AudioTrackInfo, Mode=OneWay}"
-                                    SelectedValue="{x:Bind ViewModel.AudioTrack, Mode=TwoWay}"
-                                    DisplayMemberPath="Name"/>
-                                <TextBlock
-                                    Style="{ThemeResource CaptionTextBlockStyle}"
-                                    Text="Subtitle"/>
-                                <ListView
-                                    ItemsSource="{x:Bind ViewModel.SubtitleTrackInfo, Mode=OneWay}"
-                                    SelectedValue="{x:Bind ViewModel.SubtitleTrack, Mode=TwoWay}"
-                                    DisplayMemberPath="Name"/>
-                            </StackPanel>
-                        </Flyout>
-                    </Button.Flyout>
-                </Button>
-
-                <Button Style="{StaticResource PlaybackButton}">
-                    <Button.Content>
-                        <FontIcon
-                            Margin="0,0,0,0"  
-                            Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
-                    </Button.Content>
-
-                    <Button.Flyout>
-                        <Flyout 
-                                x:Name="VolumeFlyout" 
-                                Placement="Bottom">
-                            <Grid MinWidth="200"
-                                  MaxWidth="300">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <FontIcon Grid.Column="0"
-                                          Margin="0,0,8,0" 
-                                          Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
-                                <Slider Grid.Column="1"
-                                        Margin="5,0,5,0"
-                                        Maximum="100"
-                                        Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
+                    <Button Style="{StaticResource PlayButton}"
+                            Width="48" Height="48"
+                            Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
+                        <Button.Content>
+                            <Grid>
+                                <FontIcon Margin="2,2,0,0"
+                                          Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
+                                          Glyph="&#xF5B0;" />
+                                <FontIcon Margin="1,1,0,0"
+                                          Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
+                                          Glyph="&#xF8AE;" />
                             </Grid>
-                        </Flyout>
-                    </Button.Flyout>
-                </Button>
+                        </Button.Content>
+                    </Button>
 
-                <Button
-                    Command="{x:Bind ViewModel.ToggleFullScreenCommand}"
-                    Style="{StaticResource PlaybackButton}">
+                    <Button Command="{x:Bind ViewModel.SkipForwardCommand}"
+                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                            Style="{StaticResource PlaybackButton}">
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0" Glyph="&#xED3D;" />
+                        </Button.Content>
+                    </Button>
+                </StackPanel>
 
-                    <Button.Content>
-                        <FontIcon
-                            Margin="0,0,0,0"  
-                            Glyph="&#xE740;" />
-                    </Button.Content>
-                </Button>
+                <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button Style="{StaticResource PlaybackButton}"
+                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                            IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.AudioTrackInfo.Length, ViewModel.SubtitleTrackInfo.Length), Mode=OneWay}">
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0" Glyph="&#xED1E;" />
+                        </Button.Content>
 
-                <Button Style="{StaticResource PlaybackButton}">
-                    <Button.Content>
-                        <FontIcon
-                           Margin="0,0,0,0"  
-                           Glyph="&#xE712;" />
-                    </Button.Content>
+                        <Button.Flyout>
+                            <Flyout x:Name="TracksFlyout" Placement="Bottom">
+                                <Flyout.SystemBackdrop>
+                                    <MicaBackdrop/>
+                                </Flyout.SystemBackdrop>
 
-                    <Button.Flyout>
-                        <MenuFlyout x:Name="MenuFlyout">
-                            <MenuFlyoutItem 
-                                Text="Load"
-                                Command="{x:Bind ViewModel.OpenMediaFileCommand}"/>
-                        </MenuFlyout>
-                    </Button.Flyout>
-                </Button>
-            </StackPanel>
+                                <StackPanel MinWidth="200" MaxWidth="300">
+                                    <TextBlock Style="{ThemeResource CaptionTextBlockStyle}"
+                                               Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.AudioTrackInfo.Length), Mode=OneWay}"
+                                               Text="Audio"/>
+                                    <ListView ItemsSource="{x:Bind ViewModel.AudioTrackInfo, Mode=OneWay}"
+                                              SelectedValue="{x:Bind ViewModel.AudioTrack, Mode=TwoWay}"
+                                              Margin="0,4,0,0"
+                                              DisplayMemberPath="Name"/>
+                                    <TextBlock Style="{ThemeResource CaptionTextBlockStyle}"
+                                               Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.SubtitleTrackInfo.Length), Mode=OneWay}"
+                                               Text="Subtitle"/>
+                                    <ListView ItemsSource="{x:Bind ViewModel.SubtitleTrackInfo, Mode=OneWay}"
+                                              SelectedValue="{x:Bind ViewModel.SubtitleTrack, Mode=TwoWay}"
+                                              Margin="0,4,0,0"
+                                              DisplayMemberPath="Name"/>
+                                </StackPanel>
+                            </Flyout>
+                        </Button.Flyout>
+                    </Button>
+
+                    <Button Style="{StaticResource PlaybackButton}">
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0"
+                                      Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+                        </Button.Content>
+
+                        <Button.Flyout>
+                            <Flyout x:Name="VolumeFlyout" Placement="Bottom">
+                                <Grid MinWidth="200" MaxWidth="300">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <FontIcon Grid.Column="0"
+                                              Margin="0,0,8,0"
+                                              Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+
+                                    <Slider Grid.Column="1"
+                                            Margin="5,0,5,0"
+                                            Maximum="100"
+                                            Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
+                                </Grid>
+                            </Flyout>
+                        </Button.Flyout>
+                    </Button>
+
+                    <Button Command="{x:Bind ViewModel.ToggleFullScreenCommand}"
+                            Style="{StaticResource PlaybackButton}">
+
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0" Glyph="&#xE740;" />
+                        </Button.Content>
+                    </Button>
+
+                    <Button Style="{StaticResource PlaybackButton}">
+                        <Button.Content>
+                            <FontIcon Margin="0,0,0,0" Glyph="&#xE712;" />
+                        </Button.Content>
+
+                        <Button.Flyout>
+                            <MenuFlyout x:Name="MenuFlyout">
+                                <MenuFlyoutItem Text="Load" Command="{x:Bind ViewModel.OpenMediaFileCommand}"/>
+                            </MenuFlyout>
+                        </Button.Flyout>
+                    </Button>
+                </StackPanel>
+            </Grid>
         </Grid>
-    </Grid>
+    </Border>
 </UserControl>
