--- a/src/VideoApp/Views/PlayerView.xaml
+++ b/src/VideoApp/Views/PlayerView.xaml
@@ -15,11 +15,14 @@
             <VisualStateGroup x:Name="ToolbarStates">
                 <VisualState x:Name="ToolbarVisible">
                     <Storyboard>
+                        <DoubleAnimation Duration="0:0:0.1" To="1"
+                                         Storyboard.TargetProperty="Opacity" 
+                                         Storyboard.TargetName="Toolbar"/>
                     </Storyboard>
                 </VisualState>
                 <VisualState x:Name="ToolbarHidden">
                     <Storyboard>
-                        <DoubleAnimation Duration="0:0:0.1" To="0"
+                        <DoubleAnimation Duration="0:0:0.15" To="0"
                                          Storyboard.TargetProperty="Opacity" 
                                          Storyboard.TargetName="Toolbar"/>
                     </Storyboard>
@@ -132,6 +135,6 @@
         
         <controls:PlayerToolbarControl x:Name="Toolbar" 
                                        Visibility="{x:Bind converters:Helpers.VisibleIf(Toolbar.Opacity), Mode=OneWay}"
-                                       ViewModel="{x:Bind ViewModel.PlayerControlViewModel, Mode=OneTime}"/>
+                                       ViewModel="{x:Bind ViewModel, Mode=OneTime}"/>
     </Grid>
 </UserControl>
